fix: contact spacing

--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -4,7 +4,7 @@ $gray-light: #9A9A9A;
 $dark: #272727;
 
 .banner-sec.contact {
-  padding-top: 172px;
+  padding-top: 60px;
   padding-bottom: 60px;
   .main-wrapper {
     border-radius: 24px;
@@ -185,7 +185,7 @@ $dark: #272727;
 /* Media Query */ 
 @media (max-width: 992px) {
   .banner-sec.contact {
-    padding-top: 120px;
+    padding-top: 48px;
 
     .main-wrapper {
       padding: 12px;
